# shiva

./: .gitignore  Cargo.toml  WORKFLOWS.md
.github/workflows/: ci.yml  dependabot.yml  docs.yml  release.yml
cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: core.rs  csv.rs  docx.rs  html.rs  json.rs  lib.rs  markdown.rs  ods.rs  pdf.rs  rtf.rs  text.rs  typst.rs  xls.rs  xlsx.rs  xml.rs
lib/test/data/: document_from_md.docx  document_from_xml.typ
server/: Cargo.toml
server/src/: main.rs
shiva-wasm/: Cargo.toml
test/: Cargo.toml
test/src/: html.rs
