[package]
name = "shiva"
version = "1.4.9"
edition = "2021"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/shiva"
documentation = "https://docs.rs/shiva"
license = "MIT OR Apache-2.0"
keywords = [
    "parser",
    "conversion",
    "transformer",
    "text-processing",
    "data-conversion",
]
categories = [
    "parser-implementations",
    "text-processing",
    "command-line-utilities",
    "data-structures",
    "data-structures",
]
readme = "../README.md"
description = "Shiva library: Implementation in Rust of a parser and generator for documents of any type"


exclude = ["fonts", "test"]


[package.metadata.docs.rs]
features = ["text", "markdown", "html", "pdf", "json", "xml", "csv", "docx", "xlsx", "xls", "ods"]


[dependencies]
anyhow = "1.0.98"
icu_locid = "1.5.0"
bytes = { version = "1.10.1", features = ["serde"] }
thiserror = "2.0.12"
regex = { version = "1.11.1", optional = true }
scraper = { version = "0.19.1", optional = true }
ego-tree = { version = "0.6.3", optional = true }
lopdf = { version = "0.32.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
quick-xml = { version = "0.31.0", optional = true }
csv = { version = "1.3.1", optional = true }
typst = { version = "0.11.1", optional = true }
ttf-parser = { version = "0.20.0", optional = true }
comemo = { version = "0.4.0", optional = true }
time = { version = "0.3.41", optional = true }
typst-pdf = { version = "0.11.1", optional = true }
rtf-parser = { version = "0.3.0", optional = true }
docx-rs =  { version = "0.4.17", optional = true }
pulldown-cmark = { version = "0.11.3", optional = true }
calamine = { version = "0.24.0", optional = true }
rust_xlsxwriter = { version = "0.64.2", optional = true }
shiva-spreadsheet-ods = { version = "0.0.2", optional = true }
strum = { version = "0.27.1", features = ["derive"] }
ehttp = { version = "=0.5.0",optional = true }
wasm-bindgen = "0.2.100"
image = { version = "0.25.6", optional = true }
comrak = { version = "0.40.0", optional = true }
base64 = { version = "0.22.1", optional = true }
log = "0.4.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
web-sys ={ version = "0.3.77", features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
] }

[dev-dependencies]
env_logger = "0.11.8"
log = "0.4.27"

[features]
default = ["all"]
all = ["text", "markdown", "html", "pdf", "json", "xml", "csv", "docx", "rtf", "xlsx", "xls", "ods"]
text = []
csv = ["dep:csv"]
markdown = ["regex", "pulldown-cmark", "comrak"]
html = ["scraper", "ego-tree"]
pdf = ["lopdf", "typst", "ttf-parser", "comemo", "time", "typst-pdf", "ehttp"]
json = ["serde", "serde_json", "base64"]
xml = ["serde", "serde-xml-rs", "quick-xml"]
rtf = ["rtf-parser", "image"]
docx = ["docx-rs"]
xlsx = ["calamine", "rust_xlsxwriter"]
xls = ["calamine"]
ods = ["calamine", "shiva-spreadsheet-ods"]
