[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = {version =  "0.7.9", features = ["multipart"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
#shiva = "0.4.0"
shiva = { path = "../lib" }
clap = { version = "4.5.41", features = ["derive"] }
strum_macros = "0.26.4"
tracing = "0.1.41"
hyper = "1.6.0"
reqwest = { version = "0.12.22", features = ["multipart"] }
env_logger = "0.11.8"
log = "0.4.27"
zip = "0.6"
tower-http = { version = "0.5.2", features = ["limit", "tracing"] }
anyhow = "1.0.98"

[dev-dependencies]
httpc-test = "0.1.10"
printpdf = "0.7.0"
log = "0.4.27"
